--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <ul class="nav navbar-nav">
         <li><a href="#vida_no_campus">Vida no campus</a></li>
         <li><a href="#conquistas">Conquistas</a></li>
-        <li><a href="#Novo">O que há de novo?</a></li>
-        <li><a href="#Contatos">Entre em contato</a></li>
+        <li><a href="#novidade">O que há de novo?</a></li>
+        <li><a href="#contato">Entre em contato</a></li>
       </ul>
     </div>
 
